--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "@types/validator": "^13.12.0",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
+    "bcrypt": "^5.1.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.4.0",
